--- a/index.html
+++ b/index.html
@@ -336,23 +336,28 @@ function mostrarFormulario(tipo) {
     document.addEventListener('submit', function(e) {
       if (e.target.id === 'form-mercaderia') {
         e.preventDefault();
-        const f = e.target;
+
         const data = {
-          imei: f[0].value,
-          modelo: f[1].value,
-          color: f[2].value,
-          duracionBateria: f[3].value,
-          precioCompra: parseDecimal(f[4].value),
-          precioVenta: parseDecimal(f[5].value),
-          fechaIngreso: f[6].value,
-          estado: f[7].value,
-          observaciones: f[8].value,
+          imei: document.getElementById('imei').value.trim(),
+          modelo: document.getElementById('modelo').value.trim(),
+          color: document.getElementById('color').value.trim(),
+          duracionBateria: document.getElementById('duracion').value.trim(),
+          monedaCompra: document.getElementById('moneda-compra').value,
+          tasaCambio: parseDecimal(document.getElementById('tasa-cambio').value),
+          precioCompra: parseDecimal(document.getElementById('precio-compra').value),
+          precioVenta: parseDecimal(document.getElementById('precio-venta-ars').value),
+          precioVentaUSD: parseDecimal(document.getElementById('precio-venta-usd').value),
+          fechaIngreso: document.getElementById('fecha').value,
+          estado: document.getElementById('estado').value,
+          observaciones: document.getElementById('observaciones').value.trim(),
           creadoEn: new Date().toISOString()
         };
+
         db.ref('mercaderia').push(data);
         alert('📦 Mercadería guardada con éxito');
-        f.reset();
+        e.target.reset();
       }
+
 
       if (e.target.id === 'form-venta') {
         e.preventDefault();
